src/test/ui/issues/issue-60057.rs
struct A {
    banana: u8,
}

impl A {
    fn new(peach: u8) -> A {
        A {
            banana: banana //~ ERROR cannot find value `banana` in this scope
        }
    }

    fn foo(&self, peach: u8) -> A {
        A {
            banana: banana //~ ERROR cannot find value `banana` in this scope
        }
    }
}
